--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 header {
   color: white;
-  font-size: 40px;
+  font-size: 50px;
   width: 50%;
-}
+/*}
 .header-list {
-  font-size: 200%;
+  font-size: 200%;*/
 }
 nav {
+  text-decoration: none;
   color: white;
+  font-size: 20px;
   text-align: left;
   display: list-item;
   margin-top: 300px;
@@ -16,7 +18,9 @@ body {
   background-color: gray;
 }
 footer {
+  text-decoration: none;
   color: white;
+  font-size: 25px;
   text-align: center;
   }
 
@@ -26,36 +30,39 @@ footer {
   width: 30%;
 }
 #cir1 {
-  width: 100px;
-	height: 100px;
+  width: 350px;
+	height: 350px;
 	background: blue;
-	border-radius: 50px;
+	border-radius: 300px;
   /*absolute positioning may help you fine-tune position of individual circles relative to the entire document? - Taylor*/
+  margin-top: 240px;
+  left: 500px;
   position: absolute;
-  bottom: 500px;
-  left: 700px;
 }
 #cir2 {
-  width: 60px;
-	height: 60px;
+  width: 180px;
+	height: 180px;
 	background: red;
-	border-radius: 50px;
-  margin-left: 10px;
-  margin-top: -50px;
+	border-radius: 100px;
+  margin-left: -300px;
+  margin-top: 40px;
+  position: absolute;
 }
 #cir3 {
-  width: 100px;
-	height: 100px;
+  width: 350px;
+	height: 350px;
 	background: yellow;
-	border-radius: 50px;
-  margin-bottom: 50px;
+	border-radius: 2500px;
+  margin-bottom: 250px;
+  position: absolute;
 }
 #cir4 {
-  width: 80px;
-	height: 80px;
+  width: 150px;
+	height: 150px;
 	background: orange;
-	border-radius: 50px;
-  margin-left: 120px;
+	border-radius: 100px;
+  margin-left: 70px;
   margin-bottom: 100px;
-  margin-top: -60px;
+  margin-top: 400px;
+  position: absolute;
 }
