--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ footer {
   float: right;
   width: 30%;
 }
+
+/*Nice job with these circles! They look really cool!*/
 #cir1 {
   width: 350px;
 	height: 350px;
